---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT to_char(x, 'YYYY-MM-DD HH24:MI:SS.MS TZ') FROM (SELECT Str_to_date('2021-08-31 11:05:10.400000', '%Y-%m-%d %H:%i:%s.%f') x) e\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+--------------------------------------------------+
| to_char(e.x,Utf8("YYYY-MM-DD HH24:MI:SS.MS TZ")) |
+--------------------------------------------------+
| 2021-08-31 11:05:10.400                          |
+--------------------------------------------------+
